// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Comparison/MultiColumnComparison Empty smoke-test 1`] = `
<div data-theme="light">
  <div style="padding: 20px;">
    <div>
      <div class="basic-multi-select css-b62m3t-container">
        <span id="react-select-2-live-region"
              class="css-1f43avz-a11yText-A11yText"
        >
        </span>
        <span aria-live="polite"
              aria-atomic="false"
              aria-relevant="additions text"
              role="log"
              class="css-1f43avz-a11yText-A11yText"
        >
        </span>
        <div class="select-internal__control css-1yx4vts-control">
          <div class="select-internal__value-container select-internal__value-container--is-multi css-hlgwow"
               style="display: grid;"
          >
            <div class="select-internal__placeholder css-1jqq78o-placeholder"
                 id="react-select-2-placeholder"
            >
              Select...
            </div>
            <div class="select-internal__input-container css-uji2aa"
                 data-value
            >
              <input class="select-internal__input"
                     autocapitalize="none"
                     autocomplete="off"
                     autocorrect="off"
                     id="react-select-2-input"
                     spellcheck="false"
                     tabindex="0"
                     type="text"
                     aria-autocomplete="list"
                     aria-expanded="false"
                     aria-haspopup="true"
                     role="combobox"
                     aria-activedescendant
                     aria-describedby="react-select-2-placeholder"
                     value
                     style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0px; padding: 0px;"
              >
            </div>
          </div>
          <div class="select-internal__indicators css-1wy0on6">
            <span class="select-internal__indicator-separator css-1u9des2-indicatorSeparator">
            </span>
            <div class="select-internal__indicator select-internal__dropdown-indicator css-1xc3v61-indicatorContainer"
                 aria-hidden="true"
            >
              <svg height="20"
                   width="20"
                   viewbox="0 0 20 20"
                   aria-hidden="true"
                   focusable="false"
                   class="css-tj5bde-Svg"
              >
                <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
                </path>
              </svg>
            </div>
          </div>
        </div>
        <div>
          <input name="products"
                 type="hidden"
                 value
          >
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product Comparison/MultiColumnComparison WithThreeProducts smoke-test 1`] = `
<div data-theme="light">
  <div style="padding: 20px;">
    <div>
      <div class="basic-multi-select css-b62m3t-container">
        <span id="react-select-4-live-region"
              class="css-1f43avz-a11yText-A11yText"
        >
        </span>
        <span aria-live="polite"
              aria-atomic="false"
              aria-relevant="additions text"
              role="log"
              class="css-1f43avz-a11yText-A11yText"
        >
        </span>
        <div class="select-internal__control css-1yx4vts-control">
          <div class="select-internal__value-container select-internal__value-container--is-multi select-internal__value-container--has-value css-1dyz3mf"
               style="display: flex;"
          >
            <div style="overflow: hidden; white-space: nowrap; width: 94.4219px;">
              <div class="select-internal__multi-value css-1p3m7a8-multiValue">
                <div class="select-internal__multi-value__label css-9jq23d">
                  Product A
                </div>
                <div role="button"
                     class="select-internal__multi-value__remove css-v7duua"
                     aria-label="Remove Product A"
                >
                  <svg height="14"
                       width="14"
                       viewbox="0 0 20 20"
                       aria-hidden="true"
                       focusable="false"
                       class="css-tj5bde-Svg"
                  >
                    <path d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z">
                    </path>
                  </svg>
                </div>
              </div>
            </div>
            <div style="overflow: hidden; white-space: nowrap; width: 93.4375px;">
              <div class="select-internal__multi-value css-1p3m7a8-multiValue">
                <div class="select-internal__multi-value__label css-9jq23d">
                  Product B
                </div>
                <div role="button"
                     class="select-internal__multi-value__remove css-v7duua"
                     aria-label="Remove Product B"
                >
                  <svg height="14"
                       width="14"
                       viewbox="0 0 20 20"
                       aria-hidden="true"
                       focusable="false"
                       class="css-tj5bde-Svg"
                  >
                    <path d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z">
                    </path>
                  </svg>
                </div>
              </div>
            </div>
            <div style="overflow: hidden; white-space: nowrap; width: 94.0625px;">
              <div class="select-internal__multi-value css-1p3m7a8-multiValue">
                <div class="select-internal__multi-value__label css-9jq23d">
                  Product C
                </div>
                <div role="button"
                     class="select-internal__multi-value__remove css-v7duua"
                     aria-label="Remove Product C"
                >
                  <svg height="14"
                       width="14"
                       viewbox="0 0 20 20"
                       aria-hidden="true"
                       focusable="false"
                       class="css-tj5bde-Svg"
                  >
                    <path d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z">
                    </path>
                  </svg>
                </div>
              </div>
            </div>
            <div class="select-internal__input-container css-uji2aa"
                 data-value
            >
              <input class="select-internal__input"
                     autocapitalize="none"
                     autocomplete="off"
                     autocorrect="off"
                     id="react-select-4-input"
                     spellcheck="false"
                     tabindex="0"
                     type="text"
                     aria-autocomplete="list"
                     aria-expanded="false"
                     aria-haspopup="true"
                     role="combobox"
                     aria-activedescendant
                     value
                     style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0px; padding: 0px;"
              >
            </div>
          </div>
          <div class="select-internal__indicators css-1wy0on6">
            <div class="select-internal__indicator select-internal__clear-indicator css-1xc3v61-indicatorContainer"
                 aria-hidden="true"
            >
              <svg height="20"
                   width="20"
                   viewbox="0 0 20 20"
                   aria-hidden="true"
                   focusable="false"
                   class="css-tj5bde-Svg"
              >
                <path d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z">
                </path>
              </svg>
            </div>
            <span class="select-internal__indicator-separator css-1u9des2-indicatorSeparator">
            </span>
            <div class="select-internal__indicator select-internal__dropdown-indicator css-1xc3v61-indicatorContainer"
                 aria-hidden="true"
            >
              <svg height="20"
                   width="20"
                   viewbox="0 0 20 20"
                   aria-hidden="true"
                   focusable="false"
                   class="css-tj5bde-Svg"
              >
                <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
                </path>
              </svg>
            </div>
          </div>
        </div>
        <div>
          <input name="products"
                 type="hidden"
                 value="1"
          >
          <input name="products"
                 type="hidden"
                 value="2"
          >
          <input name="products"
                 type="hidden"
                 value="3"
          >
        </div>
      </div>
      <div class="overflow-x-auto">
        <div class="comparison-table">
          <h3>
            Comparison
          </h3>
          <table class="table">
            <thead>
              <tr>
                <th>
                  Specification
                </th>
                <th class="text-center!">
                  Product A
                </th>
                <th class="text-center!">
                  Product B
                </th>
                <th class="text-center!">
                  Product C
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  color
                </td>
                <td class="text-center bg-inherit">
                  <div class="flex flex-col items-center justify-center">
                    Red
                  </div>
                </td>
                <td class="text-center bg-inherit">
                  <div class="flex flex-col items-center justify-center">
                    Blue
                  </div>
                </td>
                <td class="text-center bg-inherit">
                  <div class="flex flex-col items-center justify-center">
                    Green
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  size
                </td>
                <td class="text-center bg-inherit">
                  <div class="flex flex-col items-center justify-center">
                    Medium
                  </div>
                </td>
                <td class="text-center bg-inherit">
                  <div class="flex flex-col items-center justify-center">
                    Large
                  </div>
                </td>
                <td class="text-center bg-inherit">
                  <div class="flex flex-col items-center justify-center">
                    Small
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  weight
                </td>
                <td class="text-center bg-inherit">
                  <div class="flex flex-col items-center justify-center">
                    2kg
                  </div>
                </td>
                <td class="text-center bg-inherit">
                  <div class="flex flex-col items-center justify-center">
                    3kg
                  </div>
                </td>
                <td class="text-center bg-inherit">
                  <div class="flex flex-col items-center justify-center">
                    1.5kg
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  available regions
                </td>
                <td class="text-center bg-inherit">
                  <div class="flex flex-col items-center justify-center">
                    US, CA, EU
                  </div>
                </td>
                <td class="text-center bg-inherit">
                  <div class="flex flex-col items-center justify-center">
                    US, EU
                  </div>
                </td>
                <td class="text-center bg-inherit">
                  <div class="flex flex-col items-center justify-center">
                    US, CA, JP
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product Comparison/MultiColumnComparison WithTwoProducts smoke-test 1`] = `
<div data-theme="light">
  <div data-theme="light">
    <div style="padding: 20px;">
      <div>
        <div class="basic-multi-select css-b62m3t-container">
          <span id="react-select-3-live-region"
                class="css-1f43avz-a11yText-A11yText"
          >
          </span>
          <span aria-live="polite"
                aria-atomic="false"
                aria-relevant="additions text"
                role="log"
                class="css-1f43avz-a11yText-A11yText"
          >
          </span>
          <div class="select-internal__control css-1yx4vts-control">
            <div class="select-internal__value-container select-internal__value-container--is-multi select-internal__value-container--has-value css-1dyz3mf"
                 style="display: flex;"
            >
              <div style="overflow: hidden; white-space: nowrap; width: 94.4219px;">
                <div class="select-internal__multi-value css-1p3m7a8-multiValue">
                  <div class="select-internal__multi-value__label css-9jq23d">
                    Product A
                  </div>
                  <div role="button"
                       class="select-internal__multi-value__remove css-v7duua"
                       aria-label="Remove Product A"
                  >
                    <svg height="14"
                         width="14"
                         viewbox="0 0 20 20"
                         aria-hidden="true"
                         focusable="false"
                         class="css-tj5bde-Svg"
                    >
                      <path d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z">
                      </path>
                    </svg>
                  </div>
                </div>
              </div>
              <div style="overflow: hidden; white-space: nowrap; width: 93.4375px;">
                <div class="select-internal__multi-value css-1p3m7a8-multiValue">
                  <div class="select-internal__multi-value__label css-9jq23d">
                    Product B
                  </div>
                  <div role="button"
                       class="select-internal__multi-value__remove css-v7duua"
                       aria-label="Remove Product B"
                  >
                    <svg height="14"
                         width="14"
                         viewbox="0 0 20 20"
                         aria-hidden="true"
                         focusable="false"
                         class="css-tj5bde-Svg"
                    >
                      <path d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z">
                      </path>
                    </svg>
                  </div>
                </div>
              </div>
              <div class="select-internal__input-container css-uji2aa"
                   data-value
              >
                <input class="select-internal__input"
                       autocapitalize="none"
                       autocomplete="off"
                       autocorrect="off"
                       id="react-select-3-input"
                       spellcheck="false"
                       tabindex="0"
                       type="text"
                       aria-autocomplete="list"
                       aria-expanded="false"
                       aria-haspopup="true"
                       role="combobox"
                       aria-activedescendant
                       value
                       style="color: inherit; background: 0px center; opacity: 1; width: 100%; grid-area: 1 / 2; font: inherit; min-width: 2px; border: 0px; margin: 0px; outline: 0px; padding: 0px;"
                >
              </div>
            </div>
            <div class="select-internal__indicators css-1wy0on6">
              <div class="select-internal__indicator select-internal__clear-indicator css-1xc3v61-indicatorContainer"
                   aria-hidden="true"
              >
                <svg height="20"
                     width="20"
                     viewbox="0 0 20 20"
                     aria-hidden="true"
                     focusable="false"
                     class="css-tj5bde-Svg"
                >
                  <path d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z">
                  </path>
                </svg>
              </div>
              <span class="select-internal__indicator-separator css-1u9des2-indicatorSeparator">
              </span>
              <div class="select-internal__indicator select-internal__dropdown-indicator css-1xc3v61-indicatorContainer"
                   aria-hidden="true"
              >
                <svg height="20"
                     width="20"
                     viewbox="0 0 20 20"
                     aria-hidden="true"
                     focusable="false"
                     class="css-tj5bde-Svg"
                >
                  <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
                  </path>
                </svg>
              </div>
            </div>
          </div>
          <div>
            <input name="products"
                   type="hidden"
                   value="1"
            >
            <input name="products"
                   type="hidden"
                   value="2"
            >
          </div>
        </div>
        <div class="overflow-x-auto">
          <div class="comparison-table">
            <h3>
              Comparison
            </h3>
            <table class="table">
              <thead>
                <tr>
                  <th>
                    Specification
                  </th>
                  <th class="text-center!">
                    Product A
                  </th>
                  <th class="text-center!">
                    Product B
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    color
                  </td>
                  <td class="text-center bg-inherit">
                    <div class="flex flex-col items-center justify-center">
                      Red
                    </div>
                  </td>
                  <td class="text-center bg-inherit">
                    <div class="flex flex-col items-center justify-center">
                      Blue
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    size
                  </td>
                  <td class="text-center bg-inherit">
                    <div class="flex flex-col items-center justify-center">
                      Medium
                    </div>
                  </td>
                  <td class="text-center bg-inherit">
                    <div class="flex flex-col items-center justify-center">
                      Large
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    weight
                  </td>
                  <td class="text-center bg-inherit">
                    <div class="flex flex-col items-center justify-center">
                      2kg
                    </div>
                  </td>
                  <td class="text-center bg-inherit">
                    <div class="flex flex-col items-center justify-center">
                      3kg
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    available regions
                  </td>
                  <td class="text-center bg-inherit">
                    <div class="flex flex-col items-center justify-center">
                      US, CA, EU
                    </div>
                  </td>
                  <td class="text-center bg-inherit">
                    <div class="flex flex-col items-center justify-center">
                      US, EU
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
